# client-examples

./: README.md
nodejs/: README.md
nodejs/consuming/: main.js  package-lock.json  package.json
nodejs/producing/: main.js  package-lock.json  package.json
python/: README.md
python/producing/: example.py
rust/: .gitignore  README.md
rust/consuming/: Cargo.toml
rust/consuming/src/: main.rs
rust/producing/: Cargo.toml
rust/producing/src/: main.rs
